--- a/setup.cfg
+++ b/setup.cfg
@@ -39,3 +39,9 @@ checkers=
         toml
         flake8
         mypy
+
+[flake8]
+max-line-length = 120
+extend-exclude = src/dale/exchange/pb,build
+# ignore variable alignment
+ignore = E221,E241
