--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,9 @@ packages = find:
 include_package_data = True
 python_requires = >=3.6
 install_requires=
-        protobuf>=3.19
+        protobuf==3.19
+        ecdsa
+        cryptography
 
 [options.packages.find]
 where=src
