Added missing Python dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,8 @@ include_package_data = True
 python_requires = >=3.6
 install_requires=
         protobuf>=3.19
+        ecdsa
+        cryptography
 
 [options.packages.find]
 where=src
