--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,7 @@ requires = [
     "setuptools>=42",
     "wheel",
     "protobuf>=3.19",
+    "ecdsa",
+    "cryptography",
 ]
 build-backend = "setuptools.build_meta"
